# undertale

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  about.html  constraints.txt  environment.development.yml  environment.yml  flake.nix  genindex.html  glossary.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.py
.doctrees/: about.doctree  environment.pickle  glossary.doctree  index.doctree  reference.doctree
_sources/: index.rst.txt  reference.rst.txt
_undertale/: undertale.datasets.apt.html  undertale.datasets.assemblage.html  undertale.datasets.assemblage.vcpkg.html  undertale.datasets.assemblage.windows.html  undertale.datasets.base.html  undertale.datasets.googlecodejam.html  undertale.datasets.html  undertale.datasets.humanevalx.html  undertale.datasets.nixpkgs.html  undertale.datasets.pipeline.compilers.cpp.html  undertale.datasets.pipeline.compilers.html  undertale.datasets.pipeline.disassemblers.binaryninja.html  undertale.datasets.pipeline.disassemblers.capstone.html  undertale.datasets.pipeline.disassemblers.ghidra.html  undertale.datasets.pipeline.disassemblers.html  undertale.datasets.pipeline.disassemblers.radare2.html  undertale.datasets.pipeline.disassemblers.rizin.html  undertale.datasets.pipeline.formatters.html  undertale.datasets.pipeline.formatters.item.html  undertale.datasets.pipeline.html  undertale.datasets.pipeline.pairs.html  undertale.datasets.pipeline.pairs.pairwise_contrastive.html  undertale.datasets.pipeline.segmenters.binaryninja.html  undertale.datasets.pipeline.segmenters.ghidra.html  undertale.datasets.pipeline.segmenters.html  undertale.datasets.pipeline.segmenters.lief.html  undertale.datasets.pipeline.segmenters.rizin.html  undertale.datasets.pipeline.summarizers.html  undertale.datasets.pipeline.summarizers.vllm.html  undertale.datasets.pipeline.summariziers.html  undertale.datasets.pipeline.summariziers.openai.html  undertale.datasets.schema.html  undertale.datasets.scripts.html  undertale.datasets.scripts.pretokenize.html  undertale.datasets.scripts.shell.html  undertale.datasets.scripts.tokenize.html  undertale.datasets.xlcost.html  undertale.evaluation.html  undertale.exceptions.html  undertale.html  (+42 more)
dependencies/: development.common.sh  development.macos.sh  development.ubuntu.sh  production.macos.sh
development/: architecture.html  conventions.html  index.html  recommended-reading.html  setup.html  workflows.html
docs/: .gitignore  about.rst  conf.py  glossary.rst  index.rst
environments/: example-slurm.env  example.env
extras/inference-server/: .gitignore  README.md  constraints.txt  environment.development.yml  pyproject.toml
extras/inference-server/environments/: development.env
extras/inference-server/examples/: gunicorn.sh  nginx.conf  undertale-inference-worker.service  undertale-inference.service
extras/inference-server/inference/: __init__.py  __main__.py  api.py  exceptions.py  logging.py  models.py  settings.py  text.py  worker.py
extras/inference-server/inference/cli/: __init__.py  admin.py  authenticate.py  base.py  completions.py  destroy.py  export.py  initialize.py  migrate.py  purge.py  users.py  worker.py
pipelines/: dataset-cvebinarysheet.py  dataset-example.py  dataset-humaneval-x.py
reference/: index.html
scripts/: basic_eval.slurm  dataset.py  ddp-mlm-humanevalx.slurm  evaluate-maskedlm.slurm  finetune.sh  ftembedrun.sh  pairs.sh  pretokenize.sh  pretrain.slurm  (+4 more)
undertale/evaluation/attention/: pyproject.toml
undertale/evaluation/attention/visualize_attention_weights/: lib.py  server.py
undertale/evaluation/attention/visualize_attention_weights/static/: index.js  style.css
(+452 files in other folders)
