[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "undertale-inference"
authors = [
    {name = "Alexander Interrante-Grant", email = "ainterr@ll.mit.edu"}
]
description = "Undertale Inference Server"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-jwt-extended",
    "ldap3",
    "pandas",
    "pyarrow",
    "sqlalchemy",
    "torch"
]
dynamic = ["version"]

[project.optional-dependencies]
development = [
    "black",
    "flake8",
    "isort",
    "pip-tools",
    "pre-commit",
    "pyinstrument",
    "sphinx",
    "toml-sort"
]

[project.scripts]
inference = "inference.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "inference.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["inference*"]

[tool.tomlsort]
in_place = true
spaces_indent_inline_array = 4
sort_inline_arrays = true
